crates/ruff/tests/cli/snapshots/cli__lint__--extend-fixable.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--select"
    - F401
    - "--extend-fixable"
    - F481
    - test.py
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
ruff failed
  Cause: Unknown rule selector `F481`
