crates/ruff/tests/cli/snapshots/cli__lint__--ignore.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--select"
    - F401
    - "--ignore"
    - F481
    - test.py
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
ruff failed
  Cause: Unknown rule selector `F481`
