crates/ruff/tests/cli/snapshots/cli__lint__extend_banned_api.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
---
success: false
exit_code: 1
----- stdout -----
test.py:1:8: TID251 `cgi` is banned: Use a supported library instead.
test.py:2:20: TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
test.py:4:4: TID251 `typing.Any` is banned: Use a precise type instead.
Found 3 errors.

----- stderr -----
