crates/ruff/tests/cli/snapshots/cli__lint__extend_banned_api_inherited.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
---
success: false
exit_code: 1
----- stdout -----
child/nested/test.py:1:8: TID251 `cgi` is banned: Use a supported library instead.
child/nested/test.py:2:8: TID251 `pipes` is banned: Use shlex instead.
child/nested/test.py:3:25: TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
Found 3 errors.

----- stderr -----
